--- a/style/style.css
+++ b/style/style.css
@@ -3,10 +3,15 @@ body {
 }
 
 .container {
-    width: 85%;
+    /* border: solid 1px black; */
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    height: 600px;
     justify-content: center;
     margin: 0 auto;
-    margin-top: 7em;
+    padding: 1em;
+    margin-top: 5em;
     background-color: #fff;
     background-image: url('../images/illustration.png');
     background-repeat: no-repeat;
@@ -14,13 +19,65 @@ body {
 }
 
 .navbar {
+    /* border: solid 1px black; */
     display: flex;
-    border: solid 1px black;
+    margin: 0;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+}
+
+.navbar>* {
+    font-family: 'Roboto', sans-serif;
+}
+
+.navbar-button {
+    width: auto;
 }
 
 .content {
+    /* border: solid 1px black;  */
     display: flex;
-    border: solid 1px black;
+}
+
+.presentation {
+    /* border: solid 1px black;  */
+    width: 300px;
+    padding: 5em;
+}
+
+.scooter {
+    text-align: center;
+    padding: 1em;
+}
+
+.content-button {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    width: 100%;
+    height: 2.5em;
+    background-color: orangered;
+    border: transparent;
+}
+
+.content-button-container {
+    text-align: center;
+    margin: auto;
+    padding: 1em;
+}
+
+.company-name {
+    font-family: 'Dancing Script', cursive;
+    font-size: 28px;
+    font-weight: bolder;
+    color: orangered;
+}
+
+h2 {
+    font-family: 'Roboto', sans-serif;
+    color: red;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
 }
